añadir el funcion de (on long click) para mostrar los equipos de cada competicion

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,10 @@
         <activity
             android:name=".info_activity"
             android:label="@string/title_activity_info_activity"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".Equipo_Inof"
+            android:label="@string/title_activity_equipo__inof"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
